--- a/index.Rmd
+++ b/index.Rmd
@@ -21,12 +21,12 @@ description: "This is a training guide and reference resource for NCEAS data tea
 ## Account information
 * [LDAP - NCEAS](https://identity.nceas.ucsb.edu/identity/cgi-bin/ldapweb.cgi?cfg=account) - Jeanette or Jesse should have set this up prior to your start date to help get other accounts set up by the first day. This account and password control your access to:
     + arcticdata [RT queue](https://support.nceas.ucsb.edu/rt/)
-    + Github - [arctic-data](https://github.nceas.ucsb.edu/KNB/arctic-data/) and [sasap-data](https://github.nceas.ucsb.edu/KNB/arctic-data/)
+    + GitHub - [arctic-data](https://github.nceas.ucsb.edu/KNB/arctic-data/) and [sasap-data](https://github.nceas.ucsb.edu/NCEAS/sasap-data/)
 * Datateam server - follow instructions in email from Nick at NCEAS to reset your datateam password in the terminal
 * [ORCiD](https://orcid.org/register) - create an account
-* [NCEAS Slack](http://slack.nceas.ucsb.edu/) - get an invite from [slack.nceas.ucsb.edu](slack.nceas.ucsb.edu)
+* [NCEAS Slack](http://nceas.slack.com) - get an invite from [slack.nceas.ucsb.edu](http://slack.nceas.ucsb.edu)
 * Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request an add from Chris on Slack
-* [Schedule](https://docs.google.com/spreadsheets/d/1Jf7IkSf8Vqu51xv1DDaTNCrTAZd0RMNH9ExZw0eyH4I/edit#gid=299555270) - fill out anticipated quarterly schedule
+* [Schedule](https://docs.google.com/spreadsheets/d/1Jf7IkSf8Vqu51xv1DDaTNCrTAZd0RMNH9ExZw0eyH4I/edit#gid=948090118) - fill out anticipated quarterly schedule
 
 
 ## NCEAS Events
@@ -42,10 +42,3 @@ NCEAS hosts a number of events that you are encouraged to attend. Keep an eye on
 * Salad Potluck
     + potluck salad and socializing, bring a topping or side to share!
     + second Tuesday of the month, 12:15 in the lounge
-
-
-
-
-
-
-
