--- a/03_sysmeta.Rmd
+++ b/03_sysmeta.Rmd
@@ -3,13 +3,13 @@
 New data team members should complete [the exercise in this section](#exercise4) as part of training.
 
 ## Introduction
-Every object in the Arctic Data Center (or on the KNB) has "system metadata." An object's system metadata has information about the file itself, such as the name of the file, the format, who the rights holder is, and what the access policy is (amongst other things). Sometimes we will need to edit system metadata in order to make sure that things on the webpage display correctly, or to ensure a file downloads from the website with the correct file name and extension.
+Every object on the ADC (or on the KNB (the 'Knowledge Network for Biocomplexity')) has "system metadata". An object's system metadata has information about the file itself, such as the name of the file, the format, who the rights holder is, and what the access policy is (amongst other things). Sometimes we will need to edit system metadata in order to make sure that things on the webpage display correctly, or to ensure a file downloads from the website with the correct file name and extension.
 
-Although the majority of system metadata changes that need to be made are done with the functions in arcticdatautils, sometimes we need to change aspects of the system metadata (or sysmeta) outside of those functions. This markdown explains how to do this using the functions `getSystemMetadata` and `updateSystemMetadata`.
+Although the majority of system metadata changes that need to be made are done with the functions in `arcticdatautils`, sometimes we need to change aspects of the system metadata (or 'sysmeta' for short) outside of those functions. This markdown explains how to do this using the functions `getSystemMetadata` and `updateSystemMetadata`.
 
 ## Editing sysmeta
 
-First we need to load in some packages, and set up our environment. Note that typically if you are editing sysmeta you will need to set a token just like if you were updating a package.
+First we need to load in some packages, and set up our environment. Note that typically, if you are editing sysmeta, you will need to set a token just like if you were updating a package.
 
 ```{r setup}
 library(arcticdatautils)
@@ -26,24 +26,31 @@ pid <- 'urn:uuid:9a1b02a8-713e-4682-aafb-95c854a4c24a'
 sysmeta <- getSystemMetadata(mn, pid)
 ```
 
-This returns an S4 object (more on these objects in Chapter 4), called `sysmeta`. The sysmeta object has the following "slots":
-* serial version
-* identifier
-* formatId
-* checksum
-* checksumAlgorithm
-* submitter
-* rightsHolder
-* accesPolicy
-* replicationAllowed
-* numberReplicas
-* preferredNodes
-* blockedNodes
-* obsoletes
-* obsoletedBy
-* archived
-* dateUploaded
-* dateSysMetaModified. 
+This returns an S4 object (more on these objects in Chapter 5), called `sysmeta`. The sysmeta object has the following "slots":  
+* serialVersion  
+* identifier  
+* formatId  
+* size  
+* checksum  
+* checksumAlgorithm  
+* submitter  
+* rightsHolder  
+* accesPolicy  
+* replicationAllowed  
+* numberReplicas  
+* preferredNodes  
+* blockedNodes  
+* obsoletes  
+* obsoletedBy  
+* archived  
+* dateUploaded  
+* dateSysMetadataModified  
+* originMemberNode  
+* authoritativeMemberNode  
+* seriesId  
+* mediaType  
+* fileName  
+* mediaTypeProperty  
 
 You can view and edit slots using the `@` functionality. 
 
@@ -55,7 +62,7 @@ If you want to change a slot, you can simply do the following:
 sysmeta@fileName <- 'AlaskaWells.csv'
 ```
 
-Note that some slots cannot be changed by simple text replace (particularly the accessPolicy). There are various helper functions for changing the accessPolicy and rightsHolder such as `addAccessRule` (which takes the sysmeta as an input) or `set_access`, which only requires a PID. In general, you most frequently need to use `getSystemMetadata` to change either the formatId or fileName slots.
+Note that some slots cannot be changed by simple text replace (particularly the `accessPolicy`). There are various helper functions for changing the `accessPolicy` and `rightsHolder` such as `addAccessRule` (which takes the sysmeta as an input) or `set_access`, which only requires a PID. In general, you most frequently need to use `getSystemMetadata` to change either the `formatId` or `fileName` slots.
 
 After you have changed the necessary slot, you can update the system metadata using the `updateSystemMetadata` function, which takes the `mn` instance, your PID of interest, and the edited sysmeta object as arguments.
 
@@ -64,13 +71,13 @@ updateSystemMetadata(mn, pid, sysmeta)
 ```
 
 ### Exercise {#exercise4}
-* Read the system metadata in from the data file you uploaded in the previous chapter
-* Check to make sure the `fileName` and `formatId` are set correctly
+* Read the system metadata in from the data file you uploaded in the previous chapter.
+* Check to make sure the `fileName` and `formatId` are set correctly.
 * Update the system metadata if necessary.
 
 ## Editing sysmeta on lots of files
 
-If you have a lot of files that all need a similar change, you can use a for loop or the apply functions to efficiently make all of your changes. Say you need to change all of the format IDs of data objects in a package so that they are `text/csv`. You could do this:
+If you have a lot of files that all need a similar change, you can use a for loop or the apply functions to efficiently make all of your changes. Say you need to change all of the `formatId`s of data objects in a package so that they are `text/csv`. You could do this:
 
 ```{r, eval=FALSE}
 PID <- 'some_pid'
